--- a/app/views/create-cases-add-products/upload-a-product-image.html
+++ b/app/views/create-cases-add-products/upload-a-product-image.html
@@ -13,108 +13,129 @@
 
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-
-        <form action="#" method="post" novalidate>
-
-            <div class="govuk-grid-row">
-                <div class="govuk-grid-column-full">
-                    <h1 class="govuk-heading-l">
-                        Upload a product image  <span style="color: darkred;">- New design WIP</span>
-                    </h1>
-                </div>
-            </div>
-
-
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-form-group govuk-!-padding-top-3">
-            <label class="govuk-label govuk-label--s" for="uploadfile">
-                Upload the image file
-            </label>
-            <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
-                Do not upload case images related to damage or incidents.
-            </div>
-            <div class="govuk-!-padding-top-1">
-                <input type="file" id="uploadfile" class="govuk-file-upload" name="uploadfile" aria-describedby="uploadfile-hint">
+    <div class="govuk-grid-column-full govuk-!-padding-bottom-6">
+
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
+                <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+                    Upload a product image
+                </h1>
+                <details class="govuk-details opss-details--sm" data-module="govuk-details">
+                    <summary class="govuk-details__summary">
+                        <span class="govuk-details__summary-text">
+                            Help with product images
+                        </span>
+                    </summary>
+                    <div class="govuk-details__text">
+                        <p class="govuk-body-s">
+                            The first image you add will become the product's default image.
+                        </p>
+                        <p class="govuk-body-s">
+                            The image file types supported are: <abb>png</abb>, <abbr>jpg</abbr>, <abbr>jpeg</abbr> and <abbr>webp</abbr>.
+                        </p>
+                    </div>
+                </details>
             </div>
         </div>
 
-        {{ govukInput({
-            label: {
-                text: "Provide a title",
-                isPageHeading: false,
-                classes: "govuk-label--s"
-            },
-            hint: {
-                classes: "govuk-!-font-size-16",
-                text: "For example, PlayStation 5 Console or Dyson Power Wave 3300."
-            },
-            classes: "govuk-input--width-20",
-            id: "imagetitle",
-            name: "imagetitle",
-            attributes: {
-                maxlength: "250"
-            }
-        }) }}
-
-        {{ govukCharacterCount({
-            name: "imagedesc",
-            id: "imagedesc",
-            maxlength: 200,
-            label: {
-                text: "Describe what the image shows",
-                isPageHeading: false,
-                classes: "govuk-label--s"
-            },
-            hint: {
-                classes: "govuk-!-font-size-16",
-                text: "For example, an unboxed white Ikea TATO table lamp."
-            },
-            countMessage: {
-                classes: "govuk-!-font-size-16"
-            },
-            attributes: {
-                autocomplete: "off"
-            }
-        }) }}
-
-        {{ govukRadios({
-            classes: "govuk-radios--inline govuk-radios--small",
-            idPrefix: "another",
-            name: "another",
-            fieldset: {
-                legend: {
-                text: "Would you like to add another image after this one?",
-                classes: "govuk-label--s"
-                }
-            },
-            items: [
-                {
-                value: "yes",
-                text: "Yes"
-                },
-                {
-                value: "no",
-                text: "No"
-                }
-            ]
-        }) }}
     </div>
 </div>
 
+<div class="govuk-grid-row opss-equal-height-container">
 
+    <section class="govuk-grid-column-two-thirds opss-equal-height__col">
+        <form action="#" method="post" novalidate>
+            <div class="govuk-form-group">
+                <label class="govuk-label govuk-label--s" for="uploadfile">
+                    Upload the image file
+                </label>
+                <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16 govuk-!-width-two-thirds">
+                    Do not upload case images related to damage or incidents.
+                </div>
 
+                <div class="govuk-!-padding-top-1">
+                    <input type="file" id="uploadfile" class="govuk-file-upload" name="uploadfile" aria-describedby="uploadfile-hint">
+                </div>
+            </div>
 
-{{ govukButton({
-  text: "Continue"
-}) }}
+            {{ govukInput({
+                label: {
+                    text: "Provide a title",
+                    isPageHeading: false,
+                    classes: "govuk-label--s"
+                },
+                hint: {
+                    classes: "govuk-!-font-size-16",
+                    text: "For example, PlayStation 5 Console or Dyson Power Wave 3300."
+                },
+                classes: "govuk-input--width-20",
+                id: "imagetitle",
+                name: "imagetitle",
+                attributes: {
+                    maxlength: "250"
+                }
+            }) }}
 
-      </form>
+            {{ govukCharacterCount({
+                name: "imagedesc",
+                id: "imagedesc",
+                maxlength: 200,
+                label: {
+                    text: "Describe what the image shows",
+                    isPageHeading: false,
+                    classes: "govuk-label--s"
+                },
+                hint: {
+                    classes: "govuk-!-font-size-16",
+                    text: "For example, an unboxed white Ikea TATO table lamp, or the on-off cable switch."
+                },
+                countMessage: {
+                    classes: "govuk-!-font-size-16"
+                },
+                attributes: {
+                    autocomplete: "off"
+                }
+            }) }}
 
+            {{ govukRadios({
+                classes: "govuk-radios--inline govuk-radios--small",
+                idPrefix: "another",
+                name: "another",
+                fieldset: {
+                    legend: {
+                    text: "Would you like to add another image after this one?",
+                    classes: "govuk-label--s"
+                    }
+                },
+                hint: {
+                    classes: "govuk-!-font-size-16",
+                    text: "In addition to general product images try to include images of key details, such as plugs on electrical products or safety information on packaging."
+                },
+                items: [
+                    {
+                    value: "yes",
+                    text: "Yes"
+                    },
+                    {
+                    value: "no",
+                    text: "No"
+                    }
+                ]
+            }) }}
 
-    </div>
-  </div>
+            {{ govukButton({
+                text: "Continue"
+            }) }}
+        </form>
+    </section>
+
+    <section class="govuk-grid-column-one-third opss-equal-height__col">
+        <div class="govuk-!-margin-left-4 opss-borders opss-borders--left opss-borders--padding-l opss-borders--height-100">
+            <p class="govuk-hint govuk-!-font-size-16">There are currently no images.</p>
+        </div>
+    </section>
+
+</div>
+
 {% endblock %}
-
