styling on compare products

--- a/app/views/add-product-v4/might-already-exist.html
+++ b/app/views/add-product-v4/might-already-exist.html
@@ -32,7 +32,7 @@
                             It appears that the product you are adding might already exist in our records?
                         </div>
 
-                        <div class="govuk-!-margin-top-6 opss-borders opss-borders--padding">
+                        <div class="govuk-!-margin-top-6" style="border: 1px solid #b1b4b6; padding: 20px 20px 15px 20px; border-radius: 10px;">
                             <span class="govuk-visually-hidden">
                                 Following are the details and the description of the product that already exists in our records:
                             </span>
