--- a/app/views/create-cases-add-products/do-you-have-the-barcode-error-2.html
+++ b/app/views/create-cases-add-products/do-you-have-the-barcode-error-2.html
@@ -40,7 +40,7 @@
     text: "Enter the product barcode number"
   },
   label: {
-    html: "Enter the barcode number (<abbr>GTIN</abbr>, <abbr></abbr>EAN</abbr> or <abbr></abbr>UPC</abbr>)"
+    html: "Barcode number (<abbr>GTIN</abbr>, <abbr></abbr>EAN</abbr> or <abbr></abbr>UPC</abbr>)"
   },
   hint: {
       classes: "govuk-!-font-size-16",
