--- a/app/views/create-cases-add-products/do-you-have-the-barcode.html
+++ b/app/views/create-cases-add-products/do-you-have-the-barcode.html
@@ -28,7 +28,7 @@
   spellcheck: false,
   classes: "govuk-!-width-one-third",
   label: {
-    html: "Enter the barcode number (<abbr>GTIN</abbr>, <abbr></abbr>EAN</abbr> or <abbr></abbr>UPC</abbr>)"
+    html: "Barcode number (<abbr>GTIN</abbr>, <abbr></abbr>EAN</abbr> or <abbr></abbr>UPC</abbr>)"
   },
   hint: {
       classes: "govuk-!-font-size-16",
