--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -74,8 +74,13 @@ main.govuk-main-wrapper {
 
     .opss-panels__pair {
 
-        border: 2px solid $govuk-brand-colour; //govuk-colour("mid-grey", $legacy: "grey-2");
-        border-radius: 5px;
+        border-width: 1px;
+        border-style: solid;
+        border-color: $govuk-brand-colour; //govuk-colour("mid-grey", $legacy: "grey-2");
+        /*border-radius: 5px;*/
+        border-image: linear-gradient(0deg, #969696, $govuk-border-colour) 1;
+        box-shadow: 3px 4px 6px 0px #ebebeb; //2px 2px 10px govuk-colour("mid-grey");
+
         padding: govuk-spacing(6) govuk-spacing(5) govuk-spacing(8) govuk-spacing(6);
         margin-left: govuk-spacing(0);
         margin-right: govuk-spacing(0);
