--- a/app/views/create-cases-add-products/can-you-provide-an-image-error.html
+++ b/app/views/create-cases-add-products/can-you-provide-an-image-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Can you provide an image of the product
+    Error - Can you provide an image of the product
 {% endblock %}
 
 {% block beforeContent %}
@@ -53,7 +53,7 @@
     },
     {
       value: "no",
-      text: "No - finish and add the product"
+      text: "No"
     }
   ]
 }) }}
