--- a/app/views/create-cases-add-products/cases-page-success.html
+++ b/app/views/create-cases-add-products/cases-page-success.html
@@ -123,7 +123,7 @@
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
-                            <th id="allegation" scope="col" class="govuk-table__header">Allegation</th>
+                            <th id="allegation" scope="col" class="govuk-table__header">Case number</th>
                             <th id="caseowner" scope="col" class="govuk-table__header">Case owner</th>
                             <th id="updated" scope="col" class="govuk-table__header">Updated</th>
                         </tr>
@@ -177,8 +177,8 @@
                             </td>
                         </tr>
                     </tbody>
-<!-- ***** special newly added case tbody with extra row ends ***** -->
 
+<!-- ***** special newly added case tbody with extra row ends ***** -->
                     <tbody class="govuk-table__body">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">
@@ -207,6 +207,8 @@
                                 Status
                             </th>
                             <td headers="item-02 status-02" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                             </td>
                         </tr>
@@ -248,9 +250,7 @@
                                 Status
                             </th>
                             <td headers="item-03 status-03" colspan="3" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--risk1">Serious risk case</span>
-                                <span class="govuk-visually-hidden"> | </span>
-                                <span class="opss-tag opss-tag--risk2">Restricted case</span>
+                                <span class="opss-tag opss-tag--std">Enquiry</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -291,7 +291,7 @@
                                 Status
                             </th>
                             <td headers="item-04 status-04" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -332,7 +332,7 @@
                                 Status
                             </th>
                             <td headers="item-05 status-05" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -373,6 +373,8 @@
                                 Status
                             </th>
                             <td headers="item-06 status-06" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Enquiry</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
                             </td>
                         </tr>
@@ -414,7 +416,7 @@
                                 Status
                             </th>
                             <td headers="item-07 status-07" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Enquiry</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -455,7 +457,7 @@
                                 Status
                             </th>
                             <td headers="item-08 status-08" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -496,6 +498,8 @@
                                 Status
                             </th>
                             <td headers="item-09 status-09" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
@@ -514,7 +518,7 @@
                     <tfoot class="govuk-table__head">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
-                            <th scope="col" class="govuk-table__header">Allegation</th>
+                            <th scope="col" class="govuk-table__header">Case number</th>
                             <th scope="col" class="govuk-table__header">Case owner</th>
                             <th scope="col" class="govuk-table__header">Updated</th>
                         </tr>
