--- a/app/views/create-cases-add-products/cases-page.html
+++ b/app/views/create-cases-add-products/cases-page.html
@@ -108,7 +108,7 @@
                     <thead class="govuk-table__head">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
-                            <th id="allegation" scope="col" class="govuk-table__header">Allegation</th>
+                            <th id="allegation" scope="col" class="govuk-table__header">Case number</th>
                             <th id="caseowner" scope="col" class="govuk-table__header">Case owner</th>
                             <th id="updated" scope="col" class="govuk-table__header">Updated</th>
                         </tr>
@@ -141,6 +141,8 @@
                                 Status
                             </th>
                             <td headers="item-01 status-01" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
@@ -184,6 +186,8 @@
                                 Status
                             </th>
                             <td headers="item-02 status-02" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                             </td>
                         </tr>
@@ -225,7 +229,7 @@
                                 Status
                             </th>
                             <td headers="item-03 status-03" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Enquiry</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -266,7 +270,7 @@
                                 Status
                             </th>
                             <td headers="item-04 status-04" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -307,7 +311,7 @@
                                 Status
                             </th>
                             <td headers="item-05 status-05" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -348,6 +352,8 @@
                                 Status
                             </th>
                             <td headers="item-06 status-06" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Enquiry</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
                             </td>
                         </tr>
@@ -389,7 +395,7 @@
                                 Status
                             </th>
                             <td headers="item-07 status-07" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Enquiry</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -430,7 +436,7 @@
                                 Status
                             </th>
                             <td headers="item-08 status-08" colspan="3" class="govuk-table__cell">
-                                &nbsp;
+                                <span class="opss-tag opss-tag--std">Allegation</span>
                             </td>
                         </tr>
                         <tr class="govuk-table__row">
@@ -471,6 +477,8 @@
                                 Status
                             </th>
                             <td headers="item-09 status-09" colspan="3" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
@@ -489,7 +497,7 @@
                     <tfoot class="govuk-table__head">
                         <tr class="govuk-table__row">
                             <th class="govuk-visually-hidden">&nbsp;</th>
-                            <th scope="col" class="govuk-table__header">Allegation</th>
+                            <th scope="col" class="govuk-table__header">Case number</th>
                             <th scope="col" class="govuk-table__header">Case owner</th>
                             <th scope="col" class="govuk-table__header">Updated</th>
                         </tr>
