--- a/app/views/create-cases-add-products/describe-the-product-error.html
+++ b/app/views/create-cases-add-products/describe-the-product-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Describe the product
+    Error - Describe the product
 {% endblock %}
 
 {% block beforeContent %}
