--- a/app/views/create-cases-add-products/do-you-have-the-barcode-error-2.html
+++ b/app/views/create-cases-add-products/do-you-have-the-barcode-error-2.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Do you have the barcode number
+    Error - Do you have the barcode number
 {% endblock %}
 
 {% block beforeContent %}
