--- a/app/views/create-cases-add-products/does-the-product-have-a-brand-error-2.html
+++ b/app/views/create-cases-add-products/does-the-product-have-a-brand-error-2.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Does the product have a brand
+    Error - Does the product have a brand
 {% endblock %}
 
 {% block beforeContent %}
