--- a/app/views/create-cases-add-products/find-the-product-error.html
+++ b/app/views/create-cases-add-products/find-the-product-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Find the product
+    Error - Find the product
 {% endblock %}
 
 
