--- a/app/views/create-cases-add-products/might-already-exist-bc-error.html
+++ b/app/views/create-cases-add-products/might-already-exist-bc-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Is this your product?
+    Error - Is this your product?
 {% endblock %}
 
 {% block beforeContent %}
