--- a/app/views/create-cases-add-products/when-was-the-product-placed-error.html
+++ b/app/views/create-cases-add-products/when-was-the-product-placed-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    When was the product placed
+    Error - When was the product placed
 {% endblock %}
 
 {% block beforeContent %}
