--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -278,6 +278,7 @@ header.govuk-header + .opss-std-row.opss-std-row--borders {
     @include word-wrap;
 }
 
+/* .opss-summary-list starts ... */
 *[class^="govuk-heading"] + .opss-summary-list {
     margin-top: - govuk-spacing(1);
 }
@@ -333,6 +334,7 @@ header.govuk-header + .opss-std-row.opss-std-row--borders {
         }
     }
 }
+/* .opss-summary-list ends */
 
 .js-enabled .opss-accordian__open-remove > div:first-child {
     @include govuk-visually-hidden;
