--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -97,3 +97,57 @@ body.js-enabled .opss-nojs-hide {
     }
 }
 
+.opss-details-img {
+    max-height: 300px;
+    max-width: 100%;
+}
+
+dl.opss-summary-list-aside {
+    counter-reset: img;
+
+    dt::before {
+    counter-increment: img;
+    content: counter(img) ". ";
+    }
+
+    dt, dd {
+        display: block;
+        margin-left: 0;
+        width: 100%;
+    }
+    dt {
+        font-weight: 700;
+        border-top: 1px solid $govuk-border-colour;
+        margin-top: govuk-spacing(4);
+        padding-top: govuk-spacing(4);
+
+        &:first-child {
+            border-top: none 0;
+            margin-top: 0;
+            padding-top: 0;
+        }
+    }
+    dd {
+        img {
+            max-height: 140px;
+            max-width: 100%;
+            margin-top: govuk-spacing(1);
+            margin-bottom: govuk-spacing(1);
+        }
+    }
+    dt + dd + dd + dd  {/* image */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    @media only screen and (max-width: 600px) {
+        dt, dd {
+            @include govuk-font($size: 16);
+        }
+        dt {
+            font-weight: 700;
+        }
+    }
+
+}
