--- a/app/views/create-cases-add-products/is-case-counterfeit-error.html
+++ b/app/views/create-cases-add-products/is-case-counterfeit-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Is this case a counterfeit product
+    Error - Is this case a counterfeit product
 {% endblock %}
 
 {% block beforeContent %}
