--- a/app/views/create-cases-add-products/upload-a-product-image.html
+++ b/app/views/create-cases-add-products/upload-a-product-image.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full govuk-!-padding-bottom-6">
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
+            <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
                     Upload a product image
                 </h1>
@@ -32,7 +32,10 @@
                             The first image you add will become the product's default image.
                         </p>
                         <p class="govuk-body-s">
-                            The image file types supported are: <abb>png</abb>, <abbr>jpg</abbr>, <abbr>jpeg</abbr> and <abbr>webp</abbr>.
+                            Do not upload case images related to damage or incidents.
+                        </p>
+                        <p class="govuk-body-s">
+                            In addition to general product images try to add images of key details, such as plugs on electrical products or safety information on packaging.
                         </p>
                     </div>
                 </details>
@@ -44,14 +47,14 @@
 
 <div class="govuk-grid-row opss-equal-height-container">
 
-    <section class="govuk-grid-column-two-thirds opss-equal-height__col">
+    <section class="govuk-grid-column-two-thirds opss-equal-height__col" role="region" aria-label="Add image form">
         <form action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <label class="govuk-label govuk-label--s" for="uploadfile">
                     Upload the image file
                 </label>
                 <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16 govuk-!-width-two-thirds">
-                    Do not upload case images related to damage or incidents.
+                    The supported file types are: <abb>png</abb>, <abbr>jpg</abbr>, <abbr>jpeg</abbr> and <abbr>webp</abbr>.
                 </div>
 
                 <div class="govuk-!-padding-top-1">
@@ -80,9 +83,9 @@
             {{ govukCharacterCount({
                 name: "imagedesc",
                 id: "imagedesc",
-                maxlength: 200,
+                maxlength: 100,
                 label: {
-                    text: "Describe what the image shows",
+                    html: 'Describe what the image shows <span class="govuk-visually-hidden">for the alternative image text</span>',
                     isPageHeading: false,
                     classes: "govuk-label--s"
                 },
@@ -98,32 +101,6 @@
                 }
             }) }}
 
-            {{ govukRadios({
-                classes: "govuk-radios--inline govuk-radios--small",
-                idPrefix: "another",
-                name: "another",
-                fieldset: {
-                    legend: {
-                    text: "Would you like to add another image after this one?",
-                    classes: "govuk-label--s"
-                    }
-                },
-                hint: {
-                    classes: "govuk-!-font-size-16",
-                    text: "In addition to general product images try to include images of key details, such as plugs on electrical products or safety information on packaging."
-                },
-                items: [
-                    {
-                    value: "yes",
-                    text: "Yes"
-                    },
-                    {
-                    value: "no",
-                    text: "No"
-                    }
-                ]
-            }) }}
-
             {{ govukButton({
                 text: "Continue"
             }) }}
@@ -132,7 +109,50 @@
 
     <section class="govuk-grid-column-one-third opss-equal-height__col">
         <div class="govuk-!-margin-left-4 opss-borders opss-borders--left opss-borders--padding-l opss-borders--height-100">
-            <p class="govuk-hint govuk-!-font-size-16">There are currently no images.</p>
+
+        <!-- show this ... -->
+            <!--p class="govuk-hint govuk-!-font-size-16">There are currently no images.</p-->
+
+        <!-- or ... -->
+            <h2 class="govuk-visually-hidden">The images you have added</h2>
+            <dl class="govuk-summary-list govuk-!-font-size-14 opss-summary-list-aside">
+                <dt>
+                    <span class="govuk-visually-hidden">Title: </span>Sony hair dryer 3000
+                </dt>
+                <dd>
+                    <span class="govuk-visually-hidden">File name: </span>sony-hair-dryer-3000.jpg
+                </dd>
+                <dd>
+                    <span class="govuk-visually-hidden">Alternative image text: </span>A sony hair dryer 3000
+                </dd>
+                <dd>
+                    <span class="govuk-visually-hidden">The image: </span><img src="../public/images/hair-dryer.jpg" alt="Sony hair dryer 3000">
+                </dd>
+                <dd>
+                    <a href="/create-cases-add-products/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
+                        Remove<span class="govuk-visually-hidden">image Sony hair dryer 3000</span>
+                    </a>
+                </dd>
+
+                <dt>
+                    <span class="govuk-visually-hidden">Title: </span>Sony hair dryer 3000 with plug
+                </dt>
+                <dd>
+                    <span class="govuk-visually-hidden">File name: </span>sony-hair-dryer-3000-plug.jpg
+                </dd>
+                <dd>
+                    <span class="govuk-visually-hidden">Alternative image text: </span>Sony hair dryer with cable and plug
+                </dd>
+                <dd>
+                    <span class="govuk-visually-hidden">The image: </span><img src="../public/images/hair-dryer-with-plug.jpg" alt="Sony hair dryer 3000 with plug">
+                </dd>
+                <dd>
+                    <a href="/create-cases-add-products/remove-a-product-image-success" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-14">
+                        Remove<span class="govuk-visually-hidden"> image Sony hair dryer 3000 with plug</span>
+                    </a>
+                </dd>
+            </dl>
+
         </div>
     </section>
 
