--- a/app/views/create-cases-add-products/why-is-the-product-of-concern-error.html
+++ b/app/views/create-cases-add-products/why-is-the-product-of-concern-error.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-01.html" %}
 
 {% block pageTitle %}
-    Why is this product of concern
+    Error - Why is this product of concern
 {% endblock %}
 
 {% block beforeContent %}
