--- a/app/views/create-cases-add-products/upload-a-product-image.html
+++ b/app/views/create-cases-add-products/upload-a-product-image.html
@@ -111,10 +111,10 @@
         <div class="govuk-!-margin-left-4 opss-borders opss-borders--left opss-borders--padding-l opss-borders--height-100">
 
         <!-- show this ... -->
-            <!--p class="govuk-hint govuk-!-font-size-16">There are currently no images.</p-->
+            <p class="govuk-hint govuk-!-font-size-16">There are currently no images.</p>
 
         <!-- or ... -->
-            <h2 class="govuk-visually-hidden">The images you have added</h2>
+            <!--h2 class="govuk-visually-hidden">The images you have added</h2>
             <dl class="govuk-summary-list govuk-!-font-size-14 opss-summary-list-aside">
                 <dt>
                     <span class="govuk-visually-hidden">Title: </span>Sony hair dryer 3000
@@ -151,7 +151,7 @@
                         Remove<span class="govuk-visually-hidden"> image Sony hair dryer 3000 with plug</span>
                     </a>
                 </dd>
-            </dl>
+            </dl-->
 
         </div>
     </section>
