updated wrapping issued on main titles

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -16,11 +16,22 @@
     line-height: $l !important;
 }
 
+@mixin word-wrap() {
+  overflow-wrap: break-word; word-wrap: break-word; -ms-word-break: break-all; word-break: break-all;
+  word-break: break-word; -ms-hyphens: auto; -moz-hyphens: auto; -webkit-hyphens: auto; hyphens: auto;
+}
+
 main.govuk-main-wrapper {
     @include govuk-media-query($from: desktop) {
         min-height: 500px;
     }
     @include govuk-clearfix;
+}
+
+.govuk-heading-xl,
+.govuk-heading-l,
+.govuk-heading-m {
+    @include word-wrap;
 }
 
 .opss-nojs-hide {
