adjustments to image upload prototype flow

--- a/app/views/create-cases-add-products/products-page.html
+++ b/app/views/create-cases-add-products/products-page.html
@@ -183,14 +183,20 @@
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="added-when-2" name="added-when" type="radio" value="6mths">
+                            <input class="govuk-radios__input" id="added-when-2" name="added-when" type="radio" value="3mths">
                             <label class="govuk-label govuk-radios__label" for="added-when-2">
+                                Within 3 months
+                            </label>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="added-when-3" name="added-when" type="radio" value="6mths">
+                            <label class="govuk-label govuk-radios__label" for="added-when-3">
                                 Within 6 months
                             </label>
                         </div>
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="added-when-3" name="added-when" type="radio" value="12mths">
-                            <label class="govuk-label govuk-radios__label" for="added-when-3">
+                            <input class="govuk-radios__input" id="added-when-4" name="added-when" type="radio" value="12mths">
+                            <label class="govuk-label govuk-radios__label" for="added-when-4">
                                 Within 12 months
                             </label>
                         </div>
