--- a/app/views/create-cases-add-products/upload-a-product-image-error.html
+++ b/app/views/create-cases-add-products/upload-a-product-image-error.html
@@ -30,7 +30,7 @@
       href: "#imagedesc"
     },
     {
-      text: "Uploaded image file types must end with .png, .jpg, .jpeg and .webp",
+      text: "Uploaded image file types must end with .png, .jpg, .jpeg or .webp",
       href: "#uploadfile"
     },
     {
