--- a/app/views/create-cases-add-products/might-already-exist-bc-error.html
+++ b/app/views/create-cases-add-products/might-already-exist-bc-error.html
@@ -58,6 +58,10 @@
                             <dd class="govuk-summary-list__value">Domestic electricals</dd>
                         </div>
                         <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
+                            <dd class="govuk-summary-list__value"><span class="govuk-visually-hidden">No model number provided</span>&nbsp;</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
                             <dd class="govuk-summary-list__value">666-6667-77777-7</dd>
                         </div>
@@ -111,6 +115,12 @@
                             <dt class="govuk-summary-list__key">Subcategory </dt>
                             <dd class="govuk-summary-list__value">
                                 <span class="govuk-visually-hidden">No product name provided yet</span>&nbsp;
+                            </dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
+                            <dd class="govuk-summary-list__value">
+                                <span class="govuk-visually-hidden">No model number provided yet</span>&nbsp;
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
