--- a/app/views/create-cases-add-products/upload-a-product-image-error.html
+++ b/app/views/create-cases-add-products/upload-a-product-image-error.html
@@ -149,9 +149,13 @@
                 }
             }) }}
 
-            {{ govukButton({
-                text: "Continue"
-            }) }}
+            <div class="govuk-button-group">
+                <button class="govuk-button" data-module="govuk-button">
+                    Continue
+                </button>
+                                            <!-- the previous page -->
+                <a class="govuk-link govuk-link--no-visited-state" href="/create-cases-add-products/can-you-provide-an-image">Go back</a>
+            </div>
         </form>
     </section>
 
