--- a/app/views/create-cases-add-products/upload-a-product-image-success-error.html
+++ b/app/views/create-cases-add-products/upload-a-product-image-success-error.html
@@ -24,6 +24,20 @@
   ]
 }) }}
 
+<div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title"
+  data-module="govuk-notification-banner">
+    <div class="govuk-notification-banner__header">
+      <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title" >
+        Success
+      </h2>
+    </div>
+    <div class="govuk-notification-banner__content">
+      <p class="govuk-notification-banner__heading">
+        The image was uploaded
+      </p>
+    </div>
+</div>
+
 <div class="govuk-grid-row opss-equal-height-container">
 
     <section class="govuk-grid-column-two-thirds opss-equal-height__col" role="region" aria-label="Form">
