--- a/app/views/create-cases-add-products/what-is-the-product-name-error.html
+++ b/app/views/create-cases-add-products/what-is-the-product-name-error.html
@@ -66,6 +66,7 @@
 
 }) }}
 
+        <div class="opss-sub-form-group govuk-!-margin-bottom-4">
 
 {{ govukInput({
   formGroup: {
@@ -104,6 +105,7 @@
 
 }) }}
 
+      </div>
 
 {{ govukInput({
   formGroup: {
