--- a/app/views/create-cases-add-products/what-is-the-product-name.html
+++ b/app/views/create-cases-add-products/what-is-the-product-name.html
@@ -52,6 +52,7 @@
 
 }) }}
 
+        <div class="opss-sub-form-group govuk-!-margin-bottom-4">
 
 {{ govukInput({
   formGroup: {
@@ -90,6 +91,7 @@
 
 }) }}
 
+        </div>
 
 {{ govukInput({
   formGroup: {
@@ -108,7 +110,6 @@
   name: "modelnumber"
 
 }) }}
-
 
 {{ govukButton({
   text: "Continue",
