--- a/app/views/create-cases-add-products/might-already-exist.html
+++ b/app/views/create-cases-add-products/might-already-exist.html
@@ -47,6 +47,10 @@
                             <dd class="govuk-summary-list__value">Domestic electricals</dd>
                         </div>
                         <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
+                            <dd class="govuk-summary-list__value"><span class="govuk-visually-hidden">No model number provided</span>&nbsp;</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
                             <dd class="govuk-summary-list__value">12345678910</dd>
                         </div>
@@ -95,6 +99,12 @@
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Subcategory </dt>
                             <dd class="govuk-summary-list__value">Electricals</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">Model <span class="opss-numero" title="Number">&numero;</span> </dt>
+                            <dd class="govuk-summary-list__value">
+                                <span class="govuk-visually-hidden">No model number provided yet</span>&nbsp;
+                            </dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Barcode </dt>
