new journey complete

--- a/app/views/create-cases-add-products/how-many-units-are-affected-std.html
+++ b/app/views/create-cases-add-products/how-many-units-are-affected-std.html
@@ -18,10 +18,14 @@
 
       <h1 class="govuk-heading-l">How many units are affected?</h1>
 
-      <p class="govuk-body-m" style="margin-top: 60px;">The user continues with the current user flow for creating a case ...</p>
+      <p class="govuk-body-m" style="margin-top: 160px;">The user would now continue with the current user flow for creating a case ...</p>
 
-      <p class="govuk-body-l">On completion of the create case flow, the user lands on the <br><a href="cases-page-success" class="govuk-link govuk-link--no-visited-state">cases page - showing a success banner</a>.</p>
+      <p class="govuk-body-m">On completion of the create case flow, the user now lands on the case created confirmation page.</p>
 
+
+        <div class="govuk-button-group">
+          <a class="govuk-button" href="success-case-created">Continue</a>
+        </div>
 
 
     </div>
