--- a/app/views/create-cases-add-products/might-already-exist.html
+++ b/app/views/create-cases-add-products/might-already-exist.html
@@ -120,27 +120,21 @@
                 <fieldset class="govuk-fieldset" aria-describedby="isit-hint">
 
                     <legend class="govuk-visually-hidden">
-                            Do you want to stop adding a new product and go to the products page?
+                        Do you want to stop adding a new product?
                     </legend>
 
-                    <div class="govuk-radios govuk-!-padding-bottom-1" data-module="govuk-radios">
+                    <div class="govuk-radios govuk-!-padding-bottom-1">
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="isit" name="isit" type="radio" value="yes" aria-describedby="yes-hint">
+                            <input class="govuk-radios__input" id="isit" name="isit" type="radio" value="yes">
                             <label class="govuk-label govuk-radios__label" for="isit">
                                 Yes
                             </label>
-                            <div class="govuk-hint govuk-radios__hint govuk-!-font-size-16" id="yes-hint">
-                                Go to the products page to view the product that already exists in our records.
-                            </div>
                         </div>
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="isit-2" name="isit" type="radio" value="no" aria-describedby="no-hint">
+                            <input class="govuk-radios__input" id="isit-2" name="isit" type="radio" value="no">
                             <label class="govuk-label govuk-radios__label" for="isit-2">
-                                No
+                                No - Continue to add the new product
                             </label>
-                            <div class="govuk-hint govuk-radios__hint govuk-!-font-size-16" id="no-hint">
-                                Continue to add the new product.
-                            </div>
                         </div>
                     </div>
 
